--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -10,10 +10,27 @@
 
 <!-- Core CSS -->
 <link href="/public/css/material.min.css" rel="stylesheet">
+<!-- Fonts -->
+<link href="/public/css/material-icons.css" rel="stylesheet">
 
 </head>
 <body>
-{{{content}}}
+    <div class="mdl-layout mdl-js-layout">
+        <main class="mdl-layout__content">
+            <div class="page-content">
+              {{{content}}}
+            </div>
+        </main>
+        <footer class="mdl-mini-footer">
+            <div class="mdl-mini-footer__left-section">
+                <div class="mdl-logo">Title</div>
+                <ul class="mdl-mini-footer__link-list">
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Privacy & Terms</a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 <!-- Core JavaScript -->
 <script src="/public/js/material.min.js"></script>
 </body>
