--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,1 @@
-
-<div>
-    <h1>Søk etter elev</h1>
-    <form action="/search" method="post">
-        <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" type="text" id="searchText" name="query">
-            <label class="mdl-textfield__label" for="searchText">Søk etter elev...</label>
-        </div>
-        <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-            <i class="material-icons">search</i>
-        </button>
-    </form>
-</div>
+{{>search-students-box}}
