--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -12,14 +12,27 @@
 <link href="/public/css/material.min.css" rel="stylesheet">
 <!-- Fonts -->
 <link href="/public/css/material-icons.css" rel="stylesheet">
+<!-- Main CSS -->
+<link href="/public/css/main.css" rel="stylesheet">
 
 </head>
 <body>
-    <div class="mdl-layout mdl-js-layout">
-        <main class="mdl-layout__content">
-            <div class="page-content">
-              {{{content}}}
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+                <!-- Title -->
+                <span class="mdl-layout-title">Louie v {{version}} - {{versionName}}</span>
+                <!-- Add spacer, to align navigation to the right -->
+                <div class="mdl-layout-spacer"></div>
+                <!-- Navigation. We hide it in small screens. -->
+                <nav class="mdl-navigation mdl-layout--large-screen-only">
+                    <a class="mdl-navigation__link" href="/"><i class="material-icons">home</i></a>
+                    <a class="mdl-navigation__link" href="/logout"><i class="material-icons">login</i></a>
+                </nav>
             </div>
+        </header>
+        <main class="mdl-layout__content">
+              {{{content}}}
         </main>
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer__left-section">
