--- a/views/warning.html
+++ b/views/warning.html
@@ -1,1 +1,6 @@
 <h1>Skriv varselbrev</h1>
+
+<div class="mdl-textfield mdl-js-textfield">
+  <textarea class="mdl-textfield__input" type="text" rows="5" id="description" name="description"></textarea>
+    <label class="mdl-textfield__label" for="description">Beskrivelse</label>
+</div>
