--- a/views/search-results.html
+++ b/views/search-results.html
@@ -1,22 +1,23 @@
 {{>search-students-box}}
-<div class="mdl-grid">
-    <div class="mdl-cell--4-col"></div>
-    <div class="mdl-cell--4-col">
-    {{#each students}}
-    <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">{{name}}</h2>
-        </div>
-        <div class="mdl-card__media">
 
+
+
+{{#each students}}
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--3-col"></div>
+        <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+            <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">{{name}}</h2>
+            </div>
+            <div class="mdl-card__media">
+
+            </div>
+            <div class="mdl-card__menu">
+                <a href="/warning/{{fodselsnummer}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+                    <i class="material-icons">note_add</i>
+                </a>
+            </div>
         </div>
-        <div class="mdl-card__menu">
-            <a href="/warning/{{fodselsnummer}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
-                <i class="material-icons">add</i>
-            </a>
-        </div>
+        <div class="mdl-cell mdl-cell--3-col"></div>
     </div>
-    {{/each}}
-        </div>
-    <div class="mdl-cell--4-col"></div>
-</div>
+{{/each}}
