--- a/views/partials/search-students-box.html
+++ b/views/partials/search-students-box.html
@@ -1,11 +1,15 @@
-<div class="mdl-typography--text-center">
-    <form action="/search" method="post">
-        <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input mdl-typography--headline" type="text" id="searchText" name="query">
-            <label class="mdl-textfield__label mdl-typography--headline" for="searchText">Søk etter elev...</label>
-        </div>
-        <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-            <i class="material-icons">search</i>
-        </button>
-    </form>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--3-col"></div>
+    <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-typography--text-center mdl-typography--headline">
+        <form action="/search" method="post">
+            <div class="mdl-textfield mdl-js-textfield mdl-typography--text-center">
+                <input class="mdl-textfield__input  mdl-textfield--full-width" type="text" id="searchText" name="searchText" value="{{searchText}}">
+                <label class="mdl-textfield__label" for="searchText">Søk etter elev...</label>
+            </div>
+            <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+                <i class="material-icons">search</i>
+            </button>
+        </form>
+    </div>
+    <div class="mdl-cell mdl-cell--3-col"></div>
 </div>
