--- a/views/warning.html
+++ b/views/warning.html
@@ -1,7 +1,7 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--3-col"></div>
   <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
-    <form action="/warning" method="post">
+    <form action="/warning/{{student.fodselsnummer}}" method="post">
     <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">{{student.name}}</h2>
     </div>
