--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -18,7 +18,7 @@
 <link href="/public/css/custom.css" rel="stylesheet">
 </head>
 <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div class="mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
@@ -32,7 +32,7 @@
                 </nav>
             </div>
         </header>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout mdl-layout__content">
               {{{content}}}
         </main>
         {{>footer}}
