--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,8 @@
+.mdl-layout {
+    align-items: center;
+    justify-content: center;
+}
+
 .mdl-card__actions {
     display: flex;
     box-sizing:border-box;
