--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -22,7 +22,7 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">Louie v {{version}} - {{versionName}}</span>
+                <span class="mdl-layout-title">Louie v {{version}}</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
