--- a/views/partials/courses-list.html
+++ b/views/partials/courses-list.html
@@ -4,3 +4,7 @@
         <span class="mdl-checkbox__label">{{fagkode}} - {{fagnavn}}</span>
     </label>
 {{/each}}
+<label for="courseChkboxCourse" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxKarakter">
+    <input type="checkbox" name="coursesList" value="Manglende vurderingsgrunnlag" id="courseChkboxCourse" class="mdl-checkbox__input">
+    <span class="mdl-checkbox__label">Manglende vurderingsgrunnlag</span>
+</label>
