--- a/views/partials/warning-type-list.html
+++ b/views/partials/warning-type-list.html
@@ -1,12 +1,6 @@
-<label for="type-adferd" class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
-    <input type="radio" name="type" value="Adferd" id="type-adferd" class="mdl-radio__button" checked>
-    <span class="mdl-radio__label">Adferd</span>
-</label>
-<label for="type-karakter" class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
-    <input type="radio" name="type" value="Karakter" id="type-karakter" class="mdl-radio__button">
-    <span class="mdl-radio__label">Karakter</span>
-</label>
-<label for="type-orden" class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
-    <input type="radio" name="type" value="Orden" id="type-orden" class="mdl-radio__button">
-    <span class="mdl-radio__label">Orden</span>
-</label>
+{{#each warningTypes}}
+    <label for="type-{{id}}" class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
+        <input type="radio" name="type" value="{{id}}" id="type-{{id}}" class="mdl-radio__button">
+        <span class="mdl-radio__label">{{description}}</span>
+    </label>
+{{/each}}
