--- a/views/partials/behaviour-categories-list.html
+++ b/views/partials/behaviour-categories-list.html
@@ -1,5 +1,5 @@
 {{#each behaviour}}
-    <label for="behaviourChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxAdferd">
+    <label for="behaviourChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxadferd">
         <input type="checkbox" name="orderCategories" value="{{description}}" id="behaviourChkbox{{id}}" class="mdl-checkbox__input">
         <span class="mdl-checkbox__label">{{description}}</span>
     </label>
