--- a/views/partials/order-categories-list.html
+++ b/views/partials/order-categories-list.html
@@ -1,5 +1,5 @@
 {{#each order}}
-    <label for="orderChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxOrden">
+    <label for="orderChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxorden">
         <input type="checkbox" name="orderCategories" value="{{description}}" id="orderChkbox{{id}}" class="mdl-checkbox__input">
         <span class="mdl-checkbox__label">{{description}}</span>
     </label>
