--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -27,8 +27,8 @@
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <a class="mdl-navigation__link mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" href="/"><i class="material-icons">home</i></a>
-                    <a class="mdl-navigation__link mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect" href="/logout"><i class="material-icons">power_settings_new</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon" href="/"><i class="material-icons">home</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon" href="/logout"><i class="material-icons">power_settings_new</i></a>
                 </nav>
             </div>
         </header>
