--- a/views/login.html
+++ b/views/login.html
@@ -7,11 +7,11 @@
                 </div>
                 <div class="mdl-card__supporting-text">
                     <div class="mdl-textfield mdl-js-textfield">
-                        <input class="mdl-textfield__input" type="text" id="username" />
+                        <input class="mdl-textfield__input" type="text" id="username" name="username" />
                         <label class="mdl-textfield__label" for="username">Brukernavn</label>
                     </div>
                     <div class="mdl-textfield mdl-js-textfield">
-                        <input class="mdl-textfield__input" type="password" id="userpass" />
+                        <input class="mdl-textfield__input" type="password" id="userpass" name="password" />
                         <label class="mdl-textfield__label" for="userpass">Passord</label>
                     </div>
                 </div>
