--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -22,13 +22,13 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">Louie v {{version}}</span>
+                <span class="mdl-layout-title mdl-color-text--black">Louie v {{version}}</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <a class="mdl-navigation__link mdl-navigation__link--icon" href="/"><i class="material-icons">home</i></a>
-                    <a class="mdl-navigation__link mdl-navigation__link--icon" href="/logout"><i class="material-icons">power_settings_new</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/"><i class="material-icons">home</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logout"><i class="material-icons">power_settings_new</i></a>
                 </nav>
             </div>
         </header>
