--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
     <main class="mdl-layout__content">
         <form action="/login" method="post">
             <div class="mdl-card mdl-shadow--6dp">
-                <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+                <div class="mdl-card__title mdl-color--primary mdl-color-text--black">
                     <h2 class="mdl-card__title-text">Louie pålogging</h2>
                 </div>
                 <div class="mdl-card__supporting-text">
@@ -17,7 +17,7 @@
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
                     <div class="mdl-layout-spacer"></div>
-                    <button type="submit" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Logg på</button>
+                    <button type="submit" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect mdl-color-text--black">Logg på</button>
                 </div>
             </div>
         </form>
