lagt til tfk favicon

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -16,6 +16,8 @@
 <link href="/public/css/main.css" rel="stylesheet">
 <!-- Custom CSS -->
 <link href="/public/css/custom.css" rel="stylesheet">
+
+<link rel="icon" type="image/x-icon" href="http://www.telemark.no/bundles/tfktelemark/images/icons/favicon.ico" />
 </head>
 <body>
     <div class="mdl-js-layout mdl-layout--fixed-header">
