--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,12 +15,13 @@
 }
 
 .mdl-layout__content {
-    padding: 24px;
+   /* padding: 24px;*/
     flex: none;
 }
 
 .mdl-layout__header {
     background-color: #FFD520;
+    width: 100%;
 
 }
 
@@ -47,4 +48,22 @@ a {
 
 .mdl-button--accent {
     background-color: #6AC4AE !important;
+}
+
+.docs-footer.mdl-mini-footer {
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    height: 90px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 24px;
+
 }
