--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -29,6 +29,11 @@
     color: #fff
 }
 
+.mdl-button--fab.mdl-button--colored:hover {
+    background: #00B1C7;
+    color: #fff
+}
+
 a {
     color: #6AC4AE;
     font-weight: 500
