Separates delete and send

--- a/views/warning.html
+++ b/views/warning.html
@@ -12,8 +12,8 @@
       {{>behaviour-categories-list}}
     </div>
     <div class="mdl-card__actions mdl-card--border">
+      <a href="/" class="mdl-button mdl-button--icon mdl-button--colored" title="Slett varsel"><i class="material-icons">delete</i></a>
       <div class="mdl-layout-spacer"></div>
-      <a href="/" class="mdl-button mdl-button--icon mdl-button--colored"><i class="material-icons">delete</i></a>
       <button type="submit" class="mdl-button mdl-button--icon mdl-button--colored"><i class="material-icons">email</i></button>
     </div>
     </form>
