--- a/views/search-results.html
+++ b/views/search-results.html
@@ -11,7 +11,7 @@
                 <img src="/public/images/student.jpeg" alt="{{name}}" width="223" height="335">
             </div>
             <div class="mdl-card__menu">
-                <a href="/warning/{{fodselsnummer}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--primary">
+                <a href="/warning/{{fodselsnummer}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
                     <i class="material-icons">note_add</i>
                 </a>
             </div>
