--- a/views/warning.html
+++ b/views/warning.html
@@ -12,9 +12,9 @@
       {{>behaviour-categories-list}}
     </div>
     <div class="mdl-card__actions mdl-card--border">
-      <a href="/" class="mdl-button mdl-button--icon mdl-button--colored" title="Slett varsel"><i class="material-icons">delete</i></a>
+      <a href="/" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-color-text--black" title="Slett varsel"><i class="material-icons">delete</i></a>
       <div class="mdl-layout-spacer"></div>
-      <button type="submit" class="mdl-button mdl-button--icon mdl-button--colored"><i class="material-icons">email</i></button>
+      <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-color-text--black"><i class="material-icons">email</i></button>
     </div>
     </form>
   </div>
