--- a/views/login.html
+++ b/views/login.html
@@ -15,9 +15,9 @@
                         <label class="mdl-textfield__label" for="userpass">Passord</label>
                     </div>
                 </div>
-                <div class="mdl-card__actions mdl-card--border">
+                <div class="mdl-card__actions">
                     <div class="mdl-layout-spacer"></div>
-                    <button type="submit" class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect mdl-color-text--black">Logg på</button>
+                    <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color-text--black mdl-button--colored"><i class="material-icons">lock</i></button>
                 </div>
             </div>
         </form>
