--- a/views/partials/search-students-box.html
+++ b/views/partials/search-students-box.html
@@ -6,7 +6,7 @@
                 <input class="mdl-textfield__input  mdl-textfield--full-width" type="text" id="searchText" name="searchText" value="{{searchText}}">
                 <label class="mdl-textfield__label" for="searchText">Søk etter elev...</label>
             </div>
-            <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+            <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
                 <i class="material-icons">search</i>
             </button>
         </form>
