Adds headers for categories

--- a/views/partials/warning-type-list.html
+++ b/views/partials/warning-type-list.html
@@ -1,3 +1,4 @@
+<div class="mdl-typography--headline">Velg varseltype</div>
 {{#each warningTypes}}
     <label for="type-{{id}}" class="mdl-radio mdl-js-radio mdl-js-ripple-effect">
         <input type="radio" name="type" value="{{id}}" id="type-{{id}}" class="mdl-radio__button">
