--- a/views/partials/behaviour-categories-list.html
+++ b/views/partials/behaviour-categories-list.html
@@ -1,3 +1,4 @@
+<div class="mdl-typography--headline warning-form-header chxBxadferd">Årsak til varsel</div>
 {{#each behaviour}}
     <label for="behaviourChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxadferd">
         <input type="checkbox" name="orderCategories" value="{{description}}" id="behaviourChkbox{{id}}" class="mdl-checkbox__input">
