--- a/views/partials/courses-list.html
+++ b/views/partials/courses-list.html
@@ -1,9 +1,11 @@
+<div class="mdl-typography--headline warning-form-header chxBxkarakter">Velg fag varselet gjelder</div>
 {{#each student.mineFag}}
     <label for="courseChkbox{{fagkode}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxkarakter">
         <input type="checkbox" name="coursesList" value="{{fagkode}} - {{fagnavn}}" id="courseChkbox{{fagkode}}" class="mdl-checkbox__input">
         <span class="mdl-checkbox__label">{{fagkode}} - {{fagnavn}}</span>
     </label>
 {{/each}}
+<div class="mdl-typography--headline warning-form-header chxBxkarakter">Årsak til varsel</div>
 <label for="courseChkboxCourse" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxkarakter">
     <input type="checkbox" name="coursesList" value="Manglende vurderingsgrunnlag" id="courseChkboxCourse" class="mdl-checkbox__input">
     <span class="mdl-checkbox__label">Manglende vurderingsgrunnlag</span>
