--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
-    <main class="mdl-layout__content">
+    <main class="mdl-layout__content login-container">
         <form action="/login" method="post">
             <div class="mdl-card mdl-shadow--6dp">
                 <div class="mdl-card__title mdl-color--primary mdl-color-text--black">
