--- a/views/warning.html
+++ b/views/warning.html
@@ -2,10 +2,10 @@
   <div class="mdl-cell mdl-cell--3-col"></div>
   <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
     <form action="/warning/{{student.fodselsnummer}}" method="post">
-    <div class="mdl-card__title">
+    <div class="mdl-card__title mdl-color-text--black">
       <h2 class="mdl-card__title-text">{{student.name}}</h2>
     </div>
-    <div class="mdl-card__supporting-text">
+    <div class="mdl-card__supporting-text mdl-color-text--black">
       {{>warning-type-list}}
       {{>courses-list}}
       {{>order-categories-list}}
