--- a/views/partials/courses-list.html
+++ b/views/partials/courses-list.html
@@ -8,5 +8,5 @@
 <div class="mdl-typography--headline warning-form-header chxBxkarakter">Årsak til varsel</div>
 <label for="courseChkboxCourse" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxkarakter">
     <input type="checkbox" name="coursesList" value="Manglende vurderingsgrunnlag" id="courseChkboxCourse" class="mdl-checkbox__input">
-    <span class="mdl-checkbox__label">Manglende vurderingsgrunnlag</span>
+    <span class="mdl-checkbox__label">Eleven har manglende vurderingsgrunnlag</span>
 </label>
