--- a/views/layouts/layout-login.html
+++ b/views/layouts/layout-login.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Louie v1.0 - The Kingsmen</title>
+<title>{{systemName}} v{{version}} - {{versionName}}</title>
 
 <!-- Core CSS -->
 <link href="/public/css/material.min.css" rel="stylesheet">
