--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="docs-text-styling docs-footer mdl-mini-footer mdl-color--grey-900">
     <div class="mdl-mini-footer__left-section">
-        <div class="mdl-logo"><a href="{{versionVideoUrl}}" target="_blank">Louie v {{version}} - {{versionName}}</a></div>
+        <div class="mdl-logo"><a href="{{versionVideoUrl}}" target="_blank">{{systemName}} v {{version}} - {{versionName}}</a></div>
         <ul class="mdl-mini-footer__link-list">
             <li class="mdl-mini-footer--social-btn"><a href="#">Hjelp</li>
             <li class="mdl-mini-footer--social-btn"><a href="{{githubUrl}}" target="_blank">GitHub</a>
