--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Louie v1.0 - The Kingsmen</title>
+<title>{{systemName}} v{{version}} - {{versionName}}</title>
 
 <!-- Core CSS -->
 <link href="/public/css/material.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title mdl-color-text--black">Louie v {{version}}</span>
+                <span class="mdl-layout-title mdl-color-text--black">{{systemName}} v {{version}}</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
