--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,7 @@
         <form action="/login" method="post">
             <div class="mdl-card mdl-shadow--6dp">
                 <div class="mdl-card__title mdl-color--primary mdl-color-text--black">
-                    <h2 class="mdl-card__title-text">Louie pålogging</h2>
+                    <h2 class="mdl-card__title-text">{{systemName}} pålogging</h2>
                 </div>
                 <div class="mdl-card__supporting-text">
                     <div class="mdl-textfield mdl-js-textfield">
