--- a/views/layouts/layout-login.html
+++ b/views/layouts/layout-login.html
@@ -10,10 +10,11 @@
 
 <!-- Core CSS -->
 <link href="/public/css/material.min.css" rel="stylesheet">
-<!-- Fonts -->
-<link href="/public/css/material-icons.css" rel="stylesheet">
 <!-- Main CSS -->
 <link href="/public/css/main.css" rel="stylesheet">
+<!-- Fonts -->
+<link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <!-- Custom CSS -->
 <link href="/public/css/custom.css" rel="stylesheet">
 </head>
