--- a/views/partials/warning-type-list.html
+++ b/views/partials/warning-type-list.html
@@ -6,9 +6,13 @@
     </label>
 {{/each}}
 <div class="mdl-typography--headline">Varselet gjelder</div>
-<label for="terminChkboxCourse" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxperiod">
-    <input type="checkbox" name="periodList" value="1. termin" id="terminChkboxCourse" class="mdl-checkbox__input">
+<label for="terminChkboxCourse1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxperiod">
+    <input type="checkbox" name="periodList" value="1. termin" id="terminChkboxCourse1" class="mdl-checkbox__input">
     <span class="mdl-checkbox__label">1. termin</span>
+</label>
+<label for="terminChkboxCourse2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxperiod">
+    <input type="checkbox" name="periodList" value="2. termin" id="terminChkboxCourse2" class="mdl-checkbox__input">
+    <span class="mdl-checkbox__label">2. termin</span>
 </label>
 <label for="standpunktChkboxCourse" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxperiod">
     <input type="checkbox" name="periodList" value="Standpunktvurdering" id="standpunktChkboxCourse" class="mdl-checkbox__input">
