Adds the beginning of LDAP support

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -29,6 +29,7 @@
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
+                <span class="mdl-color-text--black">{{credentials.data.cn}}</span>
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
                     <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/"><i class="material-icons">home</i></a>
                     <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logout"><i class="material-icons">power_settings_new</i></a>
