--- a/views/layouts/layout-login.html
+++ b/views/layouts/layout-login.html
@@ -6,17 +6,18 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>{{systemName}} v{{version}} - {{versionName}}</title>
-
+<title>{{systemName}} v{{version}} - {{versionName}} - logg inn</title>
 <!-- Core CSS -->
-<link href="/public/css/material.min.css" rel="stylesheet">
-<!-- Main CSS -->
-<link href="/public/css/main.css" rel="stylesheet">
-<!-- Fonts -->
-<link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/public/css/custom.css" rel="stylesheet">
+
+<link rel="icon" type="image/x-icon" href="/public/images/icons/favicon.ico" />
+<!-- Fonts -->
+<link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=no' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     {{{content}}}
