--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -5,20 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-
 <title>{{systemName}} v{{version}} - {{versionName}}</title>
-
 <!-- Core CSS -->
-<link href="/public/css/material.min.css" rel="stylesheet">
-<!-- Main CSS -->
-<link href="/public/css/main.css" rel="stylesheet">
-<!-- Fonts -->
-<link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/public/css/custom.css" rel="stylesheet">
 
-<link rel="icon" type="image/x-icon" href="http://www.telemark.no/bundles/tfktelemark/images/icons/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="/public/images/icons/favicon.ico" />
+<!-- Fonts -->
+<link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=no' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div class="mdl-js-layout mdl-layout--fixed-header">
@@ -26,10 +24,10 @@
             <div class="mdl-layout__header-row">
                 <!-- Title -->
                 <span class="mdl-layout-title mdl-color-text--black">{{systemName}} v {{version}}</span>
+                <span class="mdl-color-text--black margin-left-20">{{credentials.data.cn}}</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
-                <span class="mdl-color-text--black">{{credentials.data.cn}}</span>
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
                     <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/"><i class="material-icons">home</i></a>
                     <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logout"><i class="material-icons">power_settings_new</i></a>
