--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,9 +1,15 @@
 <footer class="docs-text-styling docs-footer mdl-mini-footer mdl-color--grey-900">
     <div class="mdl-mini-footer__left-section">
-        <div class="mdl-logo"><a href="{{versionVideoUrl}}" target="_blank">{{systemName}} v {{version}} - {{versionName}}</a></div>
+        <div class="mdl-logo"></div>
         <ul class="mdl-mini-footer__link-list">
-            <li class="mdl-mini-footer--social-btn"><a href="#">Hjelp</li>
-            <li class="mdl-mini-footer--social-btn"><a href="{{githubUrl}}" target="_blank">GitHub</a>
+            <li><a href="{{versionVideoUrl}}" target="_blank">{{systemName}} v {{version}} - {{versionName}}</a></li>
+        </ul>
+    </div>
+    <div class="mdl-mini-footer__right-section">
+        <div class="mdl-logo"></div>
+        <ul class="mdl-mini-footer__link-list">
+            <li><a href="#">Hjelp</li>
+            <li><a href="{{githubUrl}}" target="_blank">GitHub</a>
         </ul>
     </div>
 </footer>
