--- a/views/warning.html
+++ b/views/warning.html
@@ -2,6 +2,7 @@
   <div class="mdl-cell mdl-cell--3-col"></div>
   <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
     <form action="/warning/{{student.fodselsnummer}}" method="post">
+      <input type="hidden" name="studentName" value="{{student.name}}">
     <div class="mdl-card__title mdl-color-text--black">
       <h2 class="mdl-card__title-text">{{student.name}}</h2>
     </div>
