--- a/views/partials/courses-list.html
+++ b/views/partials/courses-list.html
@@ -7,6 +7,6 @@
 {{/each}}
 <div class="mdl-typography--headline warning-form-header chxBxkarakter">Årsak til varsel</div>
 <label for="courseChkboxCourse" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxkarakter">
-    <input type="checkbox" name="coursesList" value="Manglende vurderingsgrunnlag" id="courseChkboxCourse" class="mdl-checkbox__input">
+    <input type="checkbox" name="gradesCategories" value="Manglende vurderingsgrunnlag" id="courseChkboxCourse" class="mdl-checkbox__input">
     <span class="mdl-checkbox__label">Eleven har manglende vurderingsgrunnlag</span>
 </label>
