--- a/views/partials/my-warnings.html
+++ b/views/partials/my-warnings.html
@@ -12,10 +12,10 @@
         <tbody>
             {{#each myWarnings}}
                 <tr>
-                    <td class="mdl-data-table__cell--non-numeric">{{name}}</td>
-                    <td class="mdl-data-table__cell--non-numeric">{{type}}</td>
-                    <td class="mdl-data-table__cell--non-numeric">{{status}}</td>
-                    <td class="mdl-data-table__cell--non-numeric">{{timestamp}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{studentName}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{documentCategory}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{documentStatus}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{timeStamp}}</td>
                 </tr>
             {{/each}}
         </tbody>
