--- a/views/partials/my-warnings.html
+++ b/views/partials/my-warnings.html
@@ -15,7 +15,7 @@
                     <td class="mdl-data-table__cell--non-numeric">{{studentName}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{documentCategory}}</td>
                     <td class="mdl-data-table__cell--non-numeric">{{documentStatus}}</td>
-                    <td class="mdl-data-table__cell--non-numeric">{{timeStamp}}</td>
+                    <td class="mdl-data-table__cell--non-numeric">{{formatDate timeStamp}}</td>
                 </tr>
             {{/each}}
         </tbody>
