--- a/views/search-results.html
+++ b/views/search-results.html
@@ -5,13 +5,13 @@
         <div class="mdl-cell mdl-cell--3-col"></div>
         <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
             <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">{{name}}</h2>
+                <h2 class="mdl-card__title-text">{{fullName}}</h2>
             </div>
             <div class="mdl-card__media">
-                <img src="/public/images/student.jpeg" alt="{{name}}" width="111" height="167">
+                <img src="/public/images/student.jpeg" alt="{{fullName}}" width="111" height="167">
             </div>
             <div class="mdl-card__menu">
-                <a href="/warning/{{fodselsnummer}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
+                <a href="/warning/{{personalIdNumber}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
                     <i class="material-icons">note_add</i>
                 </a>
             </div>
