--- a/views/partials/behaviour-categories-list.html
+++ b/views/partials/behaviour-categories-list.html
@@ -1,6 +1,6 @@
-<div class="mdl-typography--headline warning-form-header chxBxadferd">Årsak til varsel</div>
+<div class="mdl-typography--headline warning-form-header chxBxatferd">Årsak til varsel</div>
 {{#each behaviour}}
-    <label for="behaviourChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxadferd">
+    <label for="behaviourChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxatferd">
         <input type="checkbox" name="behaviourCategories" value="{{description}}" id="behaviourChkbox{{id}}" class="mdl-checkbox__input">
         <span class="mdl-checkbox__label">{{description}}</span>
     </label>
