Adds test of preview

--- a/views/layouts/layout-login.html
+++ b/views/layouts/layout-login.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     {{{content}}}
-<!-- Core JavaScript -->
-<script src="/public/js/material.min.js"></script>
+<!-- Modal JavaScript -->
+<script src="/public/js/material-modal.min.js"></script>
 </body>
 </html>
