--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -8,12 +8,13 @@
 <title>{{systemName}} v{{version}} - {{versionName}}</title>
 <!-- Core CSS -->
 <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+<link rel="stylesheet" href="/public/css/material-modal.min.css">
 <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
 
 <!-- Custom CSS -->
 <link href="/public/css/custom.css" rel="stylesheet">
 
-<link rel="icon" type="image/x-icon" href="/public/images/icons/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="public/images/icons/favicon.ico" />
 <!-- Fonts -->
 <link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=no' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -35,11 +36,11 @@
             </div>
         </header>
         <main class="mdl-layout mdl-layout__content">
-              {{{content}}}
+            {{{content}}}
         </main>
         {{>footer}}
     </div>
-<!-- Core JavaScript -->
-<script src="/public/js/material.min.js"></script>
+<!-- Modal JavaScript -->
+<script src="/public/js/material-modal.min.js"></script>
 </body>
 </html>
