--- a/views/warning.html
+++ b/views/warning.html
@@ -27,30 +27,7 @@
 
 </div>
 
-<div id="previewModal" class="modal modal__bg">
-  <div class="modal__dialog">
-    <div class="modal__content">
-      <div class="modal__header">
-        <div class="modal__title">
-          <h2 class="modal__title-text">{{student.fullName}}</h2>
-        </div>
-        <span class="mdl-button mdl-button--icon mdl-js-button  material-icons  modal__close"></span>
-      </div>
-      <div id="warningPreviewText" class="modal__text">
-        <ul>
-          <li>Eleven forstyrrer undervisning eller skoleaktivitet</li>
-          <li>Eleven forlater undervisning uten avklaring med lærer</li>
-          <li>Eleven har begått andre atferdsbrudd</li>
-        </ul>
-      </div>
-      <div class="modal__footer">
-        <a class="mdl-button mdl-button--colored mdl-js-button modal__close mdl-color-text--black">
-          Lukk
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
+{{>warning-preview}}
 
 <!-- Helperscript for form -->
 <script src="/public/js/warning-form.js"></script>
