Add pages for help and logs

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -31,6 +31,8 @@
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
                     <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/"><i class="material-icons">home</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/help"><i class="material-icons">help_outline</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logs"><i class="material-icons">list</i></a>
                     <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logout"><i class="material-icons">power_settings_new</i></a>
                 </nav>
             </div>
