--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -8,7 +8,7 @@
     <div class="mdl-mini-footer__right-section">
         <div class="mdl-logo"></div>
         <ul class="mdl-mini-footer__link-list">
-            <li><a href="#">Hjelp</li>
+            <li><a href="/help">Hjelp</a></li>
             <li><a href="{{githubUrl}}" target="_blank">GitHub</a>
         </ul>
     </div>
