--- a/views/warning.html
+++ b/views/warning.html
@@ -19,7 +19,7 @@
       <div class="mdl-layout-spacer"></div>
       <a href="" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-color-text--black modal__trigger" data-modal="#previewModal"><i class="material-icons">description</i></a>
       <span class="margin-right-5"></span>
-      <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-color-text--black material-icons">email</button>
+      <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-color-text--black material-icons">mail_outline</button>
     </div>
     </form>
   </div>
