--- a/views/help.html
+++ b/views/help.html
@@ -1,7 +1,52 @@
 <div class="mdl-grid">
     <div class="mdl-cell mdl-cell--3-col"></div>
-    <div class="mdl-cell--6-col mdl-cell--4-col-tablet">
-        <h1>Hjelp</h1>
-    </div>
+    <table class="mdl-data-table mdl-js-data-table mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+        <thead>
+        <tr>
+            <th class="mdl-data-table__cell--non-numeric">Ikon/Valg</th>
+            <th class="mdl-data-table__cell--non-numeric">Funksjon</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric" colspan="2">
+                <strong>Navigasjon</strong>
+            </td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">home</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Til forsiden</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">help_outline</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Hjelp (denne siden)</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">list</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Aktivitetslogg</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">power_settings_new</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Avslutt/Logg ut av {{systemName}}</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric" colspan="2">
+                <strong>Produsere varsel</strong>
+            </td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">delete</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Slette/forkaste varsel</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">description</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Forhåndsvis varsel</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">mail_outline</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Send varsel til distribusjon</td>
+        </tr>
+        </tbody>
+    </table>
     <div class="mdl-cell mdl-cell--3-col"></div>
 </div>
