--- a/views/search-results.html
+++ b/views/search-results.html
@@ -11,7 +11,10 @@
                 <img src="/public/images/student.jpeg" alt="{{fullName}}" width="111" height="167">
             </div>
             <div class="mdl-card__menu">
-                <a href="/warning/{{personalIdNumber}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
+                <a href="/logs?studentId={{personalIdNumber}}" title="Vis aktivitetslogg for {{fullName}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
+                    <i class="material-icons">list</i>
+                </a>
+                <a href="/warning/{{personalIdNumber}}" title="Skriv varsel for {{fullName}}" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--black">
                     <i class="material-icons">note_add</i>
                 </a>
             </div>
