Adds validation to warning form

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -57,3 +57,7 @@
 .modal__dialog {
     width: 600px;
 }
+
+button[disabled=disabled], button:disabled {
+    background-color: #B2B2B2 !important;
+}
