Implements API for logs/queue

--- a/views/partials/logs-list.html
+++ b/views/partials/logs-list.html
@@ -14,7 +14,7 @@
         <tr>
             <td class="mdl-data-table__cell--non-numeric">{{studentName}}</td>
             <td class="mdl-data-table__cell--non-numeric">{{documentCategory}}</td>
-            <td class="mdl-data-table__cell--non-numeric">{{documentStatus}}</td>
+            <td class="mdl-data-table__cell--non-numeric">{{latestDocumentStatus documentStatus}}</td>
             <td class="mdl-data-table__cell--non-numeric">{{formatDate timeStamp}}</td>
         </tr>
         {{/each}}
