--- a/views/partials/warning-preview.html
+++ b/views/partials/warning-preview.html
@@ -8,9 +8,10 @@
                 <span class="mdl-button mdl-button--icon mdl-js-button  material-icons  modal__close"></span>
             </div>
             <div class="modal__text">
-                <ul id="warningPreviewText" class="previewUL">
-
-                </ul>
+                <div>
+                    Forhåndsvisning av hva som sendes til eleven.
+                </div>
+                <ul id="warningPreviewText" class="previewUL"></ul>
             </div>
             <div class="modal__footer">
                 <a class="mdl-button mdl-button--colored mdl-js-button modal__close mdl-color-text--black">
