Adds validation on login page

--- a/views/layouts/layout-login.html
+++ b/views/layouts/layout-login.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     {{{content}}}
-<!-- Modal JavaScript -->
-<script src="/public/js/material-modal.min.js"></script>
+<!-- Validate login -->
+<script src="/public/js/login-validate.js"></script>
 </body>
 </html>
