--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="mdl-card__actions">
                     <div class="mdl-layout-spacer"></div>
-                    <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color-text--black mdl-button--colored"><i class="material-icons">lock</i></button>
+                    <button type="submit" id="submitLogin" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color-text--black mdl-button--colored"><i class="material-icons">lock</i></button>
                 </div>
             </div>
         </form>
