--- a/views/partials/warning-preview.html
+++ b/views/partials/warning-preview.html
@@ -9,7 +9,7 @@
             </div>
             <div class="modal__text">
                 <div>
-                    Forhåndsvisning av hva som sendes til eleven.
+                    Forhåndsvisning av hva som vil legges i brevmalen til eleven.
                 </div>
                 <ul id="warningPreviewText" class="previewUL"></ul>
             </div>
