--- a/views/partials/courses-list.html
+++ b/views/partials/courses-list.html
@@ -1,7 +1,7 @@
 <div class="mdl-typography--headline warning-form-header chxBxkarakter">Velg fag varselet gjelder</div>
 {{#each student.groups}}
     <label for="courseChkbox{{id}}" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect chxBxkarakter">
-        <input type="checkbox" name="coursesList" value="{{id}}" id="courseChkbox{{id}}" class="mdl-checkbox__input">
+        <input type="checkbox" name="coursesList" value="{{id}} - {{description}}" id="courseChkbox{{id}}" class="mdl-checkbox__input">
         <span class="mdl-checkbox__label">{{description}}</span>
     </label>
 {{/each}}
