--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,9 @@
                 <div class="mdl-card__title mdl-color--primary mdl-color-text--black">
                     <h2 class="mdl-card__title-text">{{systemName}} pålogging</h2>
                 </div>
+                <div class="mdl-card__subtitle-text mdl-color-text--red padding5">
+                    {{loginError loginErrorMessage}}
+                </div>
                 <div class="mdl-card__supporting-text">
                     <div class="mdl-textfield mdl-js-textfield">
                         <input class="mdl-textfield__input" type="text" id="username" name="username" />
