Adds helpers and help text

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -71,3 +71,8 @@ button[disabled=disabled], button:disabled {
 .padding5 {
     padding: 5px;
 }
+
+.hide-me {
+    display: none;
+    visibility: hidden;
+}
