--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,14 @@
 {{>search-students-box}}
 
 {{>logs-list}}
+
+<div class="mdl-grid {{hideMe logs}}">
+    <div class="mdl-cell mdl-cell--3-col"></div>
+    <div class="mdl-data-table mdl-js-data-table mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+        Søk frem elever ved å skrive deler av eller hele navnet i søkefeltet trykk deretter <span class="material-icon">search</span><br/>
+        Fra listen av navn:<br/>
+        Trykk <span class="material-icons"></span> for å skrive et nytt varsel til eleven.<br/>
+        Velg <span class="material-icons"></span> for å se varselhistorikk for eleven.<br/>
+    </div>
+    <div class="mdl-cell mdl-cell--3-col"></div>
+</div>
