--- a/views/logs.html
+++ b/views/logs.html
@@ -6,3 +6,10 @@
     <div class="mdl-cell mdl-cell--3-col"></div>
 </div>
 {{>logs-list}}
+<div class="mdl-grid {{hideMe logs}}">
+    <div class="mdl-cell mdl-cell--3-col"></div>
+    <div class="mdl-data-table mdl-js-data-table mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+        Ingen logger funnet
+    </div>
+    <div class="mdl-cell mdl-cell--3-col"></div>
+</div>
