--- a/views/partials/logs-list.html
+++ b/views/partials/logs-list.html
@@ -1,4 +1,4 @@
-<div class="mdl-grid">
+<div class="mdl-grid {{showMe logs}}">
     <div class="mdl-cell mdl-cell--3-col"></div>
     <table class="mdl-data-table mdl-js-data-table mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
         <thead>
