--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -29,6 +29,10 @@
     background-color: #FFD520 !important;
 }
 
+.mdl-textfield__label:after {
+    background-color: #6AC4AE !important;
+}
+
 .docs-footer.mdl-mini-footer {
     position: relative;
     height: 90px;
@@ -75,4 +79,8 @@ button[disabled=disabled], button:disabled {
 .hide-me {
     display: none;
     visibility: hidden;
+}
+
+.center {
+    max-width: 980px;
 }
