--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -20,7 +20,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="mdl-js-layout mdl-layout--fixed-header">
+    <div class="mdl-layout--fixed-header">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
@@ -30,17 +30,18 @@
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/"><i class="material-icons">home</i></a>
-                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/help"><i class="material-icons">help_outline</i></a>
-                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logs"><i class="material-icons">list</i></a>
-                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logout"><i class="material-icons">power_settings_new</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/" title="Til forsiden"><i class="material-icons">home</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/help" title="Vis hjelpesiden"><i class="material-icons">help_outline</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logs" title="Vis aktivitetslogg"><i class="material-icons">list</i></a>
+                    <a class="mdl-navigation__link mdl-navigation__link--icon mdl-color-text--black" href="/logout" title="Logg ut av {{systemName}}"><i class="material-icons">power_settings_new</i></a>
                 </nav>
             </div>
         </header>
-        <main class="mdl-layout mdl-layout__content">
+        <main class="mdl-layout mdl-js-layout mdl-layout__content">
             {{{content}}}
+            {{>footer}}
         </main>
-        {{>footer}}
+
     </div>
 <!-- Modal JavaScript -->
 <script src="/public/js/material-modal.min.js"></script>
