--- a/views/search-results.html
+++ b/views/search-results.html
@@ -1,9 +1,25 @@
 {{>search-students-box}}
 
+<div class="mdl-grid {{showMe students}}">
+    <div class="mdl-cell mdl-cell--3-col"></div>
+    <table class="mdl-cell--6-col mdl-cell--8-col-tablet">
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">list</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Vis aktivitetslogg for eleven</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">note_add</i></td>
+            <td class="mdl-data-table__cell--non-numeric">Skriv varsel for eleven</td>
+        </tr>
+        </tbody>
+    </table>
+    <div class="mdl-cell mdl-cell--3-col"></div>
+</div>
+
 {{#each students}}
     <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--3-col"></div>
-        <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+        <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-shadow--2dp">
             <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">{{fullName}}</h2>
             </div>
@@ -22,3 +38,16 @@
         <div class="mdl-cell mdl-cell--3-col"></div>
     </div>
 {{/each}}
+
+<div class="mdl-grid {{hideMe students}}">
+    <div class="mdl-cell mdl-cell--3-col"></div>
+    <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">Ingen elever funnet</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+            Vennligst forsøk en annen søkestreng.<br/>
+        </div>
+    </div>
+    <div class="mdl-cell mdl-cell--3-col"></div>
+</div>
