--- a/views/warning.html
+++ b/views/warning.html
@@ -1,6 +1,6 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--3-col"></div>
-  <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-shadow--2dp">
+  <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-shadow--2dp">
     <form action="/warning/{{student.personalIdNumber}}" method="post">
       <input type="hidden" name="studentName" value="{{student.fullName}}">
       <input type="hidden" name="schoolId" value="{{student.unitId}}">
@@ -24,10 +24,30 @@
     </form>
   </div>
   <div class="mdl-cell mdl-cell--3-col"></div>
-
 </div>
 
 {{>warning-preview}}
+
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--3-col"></div>
+  <table class="mdl-cell--6-col mdl-cell--8-col-tablet">
+    <thead>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">delete</i></td>
+      <td class="mdl-data-table__cell--non-numeric">Slette/forkaste varsel</td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">description</i></td>
+      <td class="mdl-data-table__cell--non-numeric">Forhåndsvis varsel</td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric"><i class="material-icons">mail_outline</i></td>
+      <td class="mdl-data-table__cell--non-numeric">Send varsel til distribusjon</td>
+    </tr>
+    </tbody>
+  </table>
+  <div class="mdl-cell mdl-cell--3-col"></div>
+</div>
 
 <!-- Helperscript for form -->
 <script src="/public/js/warning-form.js"></script>
